--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <titl>Meditation Trainer</title>
+    <title>Meditation Trainer</title>
   </head>
   
   <body>
