--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>Meditation Trainer</title>
     <link rel="stylesheet" href="style.css">
-    <link
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
   </head>
   
   <body>
