--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Meditation Trainer</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-
   </head>
   
   <body>
-    <h1>Meditation Trainer</h1>
+    <div class="container">
+      <h1>Meditation Trainer</h1>
+    </div>
   </body>
 </html>
