--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div class="container">
       <h1>Meditation Trainer</h1>
+      <div class="section">
+        
+      </div>
     </div>
   </body>
 </html>
