--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Meditation Trainer</h1>
       <div class="section">
-        
+        <h2>Breath Log</h2>
       </div>
     </div>
   </body>
