--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Breath Log</h2>
       </div>
       <div class="section">
-        
+        <h2>Stats</h2>
       </div>
     </div>
   </body>
