--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <div class="container">
       <h1>Meditation Trainer</h1>
-      <div class="section">
+      <div class="section column">
         <h2>Breath Log</h2>
       </div>
-      <div class="section">
+      <div class="section column">
         <h2>Stats</h2>
       </div>
     </div>
