Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       <h1>Meditation Trainer</h1>
       <div class="section column">
         <h2>Breath Log</h2>
+        <button></button>
       </div>
       <div class="section column">
         <h2>Stats</h2>
       </div>
+      
     </div>
   </body>
 </html>
