--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Meditation Trainer</h1>
       <div class="section column">
         <h2>Breath Log</h2>
-        <button type="button">Start Inhale</button>
+        <button class="button" type="button">Start Inhale</button>
       </div>
       <div class="section column">
         <h2>Stats</h2>
