--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <div class="section column">
         <h2>Stats</h2>
       </div>
+      <div>
       <button class="button" type="button">Start Inhale</button>
-      
+      </div>
     </div>
   </body>
 </html>
