--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="section column">
         <h2>Stats</h2>
       </div>
-      <div>
+      <div class="column">
       <button class="button" type="button">Start Inhale</button>
       </div>
     </div>
