--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Meditation Trainer</h1>
       
       
-      <div class="">
+      <div class="section column">
         <table>  
           <tr>
             <th>Breath Log</th>
