Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             </tr>  
           </table>  
         </div>
-  
+        <div class="section">
           <h2>Stats</h2>
+        </div>  
+          
         </div>
       <div class="column">
       <button class="button" type="button">Start Inhale</button>
