Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <h1>Meditation Trainer</h1>
       
       
-      <div class="main table">
+      <div class="main">
         <div class="section">
           <table>  
             <tr>
