--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         </div>
         
         <div class="section">
-          <h2>Stats</h2>
+          <table>
+            <th>Stats</th>
+          </table>  
         </div>  
       </div>
       
