Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
               <th></th>
               <th>Stats</th>
             </tr>
-            <tr></tr>
+            <tr>Mean</tr>
+            <tr>Medium</tr>
+            <tr>Mode</tr>
+            <tr>Std. Dev.</tr>
           </table>  
         </div>  
       </div>
