Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
               <th></th>
               <th>Stats</th>
             </tr>
-            <tr>Mean</tr>
-            <tr>Medium</tr>
-            <tr>Mode</tr>
+            <tr>
+              <td>Mean</td>
+            </tr>
+            <tr>
+              <td>Medium</td>
+            </tr> 
+            <tr>
+              <td>Mode</td>
+            </tr>  
             <tr>Std. Dev.</tr>
           </table>  
         </div>  
