Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             </tr> 
             <tr>
               <td>Mode</td>
+            </tr>
+            <tr>
+              <td>Std. Dev.</td>
             </tr>  
-            <tr>Std. Dev.</tr>
           </table>  
         </div>  
       </div>
