--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>  
       </div>
       
-      <div class="column">
+      <div class="main-2 column">
         <button class="button" type="button">Start Inhale</button>
       </div>
     
