--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
         <div class="section-2">
           <button class="button" type="button">Start Inhale</button>
         </div>
-        <div></div>
+        <div class="section-2">
+          <textarea></textarea>
+        </div>
       </div>
     </div>
   </body>
