--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <button class="button" type="button">Start Inhale</button>
         </div>
         <div class="section-2">
-          <textarea ></textarea>
+          <textarea rows="4" cols="50"></textarea>
         </div>
       </div>
     </div>
