--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
           <button class="button" type="button">Start Inhale</button>
         </div>
         <div class="section-2">
-          <textarea rows="4" cols="50"></textarea>
+          <table>
+            <tr>
+              <th>Instructions</th>
+            </tr>
+          </table>
         </div>
       </div>
     </div>
