--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <th>Instructions</th>
             </tr>
             <tr>
-              <td>_________________</td>
+              <td id="instructions">_________________</td>
             </tr>
           </table>
         </div>
