Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <th>Instructions</th>
             </tr>
             <tr>
-              <td id="instructions">______________</td>
+              <td id="instructions"></td>
             </tr>
           </table>
         </div>
