--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>  
       </div>
       
-      <div class="main-2 column">
+      <div class="main-2">
         <div class="section-2">
           <button class="button" type="button">Start Inhale</button>
         </div>
